static/css/photos.css
/* Main
   ========================================================================== */

@media (min-width: 1512px) {
#header { margin-right: 60px; }
body #content-wrap { position: relative; margin-right: 71px; } }

#content { max-width: 850px; }


/* Sidebar
   ========================================================================== */

#sidebar {
    margin-bottom: 36px;
    border: 1px solid #deda99;
    padding: 0 4px;
    width: 305px;
    background-color: #fbf2bd;
    font-size: 18px; }
#sidebar::-webkit-scrollbar { width: 0px; }
#sidebar-cruncher {
    overflow-y: hidden; }

body #sidebar-column {
    position: absolute;
    top: 132px;
    right: 42.76%;
    height: calc(100% - 132px);
    transform: translateX(649px); }
body #sidebar {
    position: -webkit-sticky;
    position: sticky;
    top: 42px;
    will-change: transform;
    max-height: 82vh;
    overflow-y: scroll;
    scrollbar-width: none; }
@media (max-width: 1512px) {
body #sidebar-column {
    position: relative;
    top: 30px;
    right: auto;
    transform: none; }
body #sidebar {
    max-height: none; } }

#sidebar a { transition: color 0.12s linear; }
#sidebar #sidebar-photos-link { color: black; }
#sidebar #sidebar-photos-link:hover { color: #f7a300; }

#sidebar .widget { margin-bottom: 4px; padding-left: 2px; }
#sidebar h3 { padding: 0.5em 0 2px 0.5em; }
#sidebar p { text-align: center; padding-right: 20px; }
#sidebar ul { margin-left: 1.2em; }
#sidebar { padding-bottom: 29px; }

#sidebar #widget-welcome {
    margin-top: 20px;
    margin-bottom: 21px;
    padding: 0 8px;
    font-size: 19px;
    font-style: italic; }

#sidebar .hseparator {
    margin: 0 auto;
    width: 55%;
    border-bottom-color: #deda99; }

#sidebar #widget-galleries {
    margin-top: 20px; }

#sidebar li:before { font-family: Arial; font-size: 17px; content: "●"; }
.android #sidebar li:before { font-size: 9px; vertical-align: middle; }
.android.webkit #sidebar li:before { font-size: 17px; vertical-align: unset; }


/* Gallery Overview
   ========================================================================== */

#gallery-title {
    margin-top: 24px;
    padding: 0 16px;
    font-weight: bold;
    font-size: 50px;
    text-align: center;
}
#gallery-title h1 {
    display: inline;
    border-bottom: solid 1px #a57100;
}

#gallery-photos {
    margin: 40px 6px;
    padding: 6px;
    border: solid 1px #d3d4db;
    background-color: #fffddb;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-pack: center;
    justify-content: center;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
}

.photo-display {
    margin: 5px 5px;
    width: 150px;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-pack: center;
    justify-content: center;
    -ms-flex-align: center;
    align-items: center;
}

.photo-display a { display: flex; }
.photo-display a img {
    -ms-flex-item-align: center;
    align-self: center;
    max-width: 150px;
    max-height: 150px;
    border: 1px solid #eee;
    transition: all 0.3s ease;
}
.photo-display a img:hover {
    border: 1px solid rgba(0, 0, 255, 0.4);
    box-shadow: 0 0 12px 0 rgba(0, 13, 181, 0.7);
}

#gallery-description {
    margin-top: -3px;
    padding-left: 6px;
    padding-right: 4px;
    font-size: 19px;
    font-style: italic;
}
@media (max-width: 700px) {
#gallery-description {
    padding-left: 22.2px;
    padding-right: 23px;
    font-size: 18px;
} }
_:-ms-fullscreen, :root #gallery-description { margin-bottom: 16px; } /* IE 11 */
#gallery-description #desc-fr { padding-top: 4px; padding-bottom: 16px; }
#gallery-description .hseparator { margin-left: -20px; margin-right: -16px; }
@media (max-width: 896px) { #gallery-description .hseparator { margin: 0 6px; } }
@media (max-width: 700px) { #gallery-description .hseparator { margin: 0 80px; } }
#gallery-description #desc-en { padding-top: 16px; padding-bottom: 10px; }
#gallery-description #desc-fr p:first-child, #gallery-description #desc-en p:first-child { padding-top: 0; padding-bottom: 4px; }
#gallery-description #desc-fr p, #gallery-description #desc-en p { padding-top: 4px; padding-bottom: 4px; }
#gallery-description #desc-fr p:last-child, #gallery-description #desc-en p:last-child { padding-top: 4px; padding-bottom: 0; }
#gallery-description #desc-date {
    margin-top: 2px;
    padding-right: 13px;
    text-align: right;
}


/* Gallery Slider
   ========================================================================== */

#gallery-overlay {
    background-color: rgba(30, 30, 30, 0.98);
    transition-duration: 0.7s;
}

#gallery-slider {
    width: 96%;
    height: 96.5%;
}
#gallery-slider .slides { height: 100%; }
#gallery-slider .slides li {
    height: 100%;
    display: -ms-flexbox !important;
    display: flex !important;
    -ms-flex-direction: column;
    flex-direction: column;
    -ms-flex-pack: center;
    justify-content: center;
    -ms-flex-align: center;
    align-items: center;
}
#gallery-slider .slides li .slide {
    display: -ms-flexbox;
    display: flex;
    -ms-flex-direction: column;
    flex-direction: column; }
#gallery-slider .slides li .slide .slide-img { position: relative; width: 100%; }
#gallery-slider .slides li .slide .slide-img img { width: 100%; display: block; }
#gallery-slider .slides li .slide .slide-img img:first-child { position: relative; }
#gallery-slider .slides li .slide .slide-img img:not(:first-child) { position: absolute; top: 0; left: 0; }
#gallery-slider .slides li .slide .slide-info {
    padding: 0 2px;
    width: 100%;
    height: 24px;
    color: #ccc;
    font-family: AlegreyaSans;
    display: -ms-inline-flexbox;
    display: inline-flex;
    -ms-flex-pack: justify;
    justify-content: space-between;

}
#gallery-slider .slides li .slide .slide-info .slide-title {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis; }
#gallery-slider .slides li .slide .slide-info .slide-index {
    white-space: nowrap; }

#gallery-slider .flex-direction-nav {
    position: fixed;
    z-index: 10;
    top: 39.5%;
    left: 0;
    margin: 0 2%;   /* bound to the gallery-slider width */
    width: 96%;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-pack: justify;
    justify-content: space-between;
}
#gallery-slider .flex-direction-nav a {
    opacity: 0.3;
    color: #aaa;
    text-decoration: none;
    font-family: SoljikDambaek;
    font-size: 160px;
    transition: all 0.4s ease;
}
#gallery-slider .flex-direction-nav a:hover { opacity: 0.6; color: #ddd; }
#gallery-slider .flex-direction-nav a:focus { outline: none; }

